--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.454.0",
     "mongodb": "7.0.0",
     "mongodb-client-encryption": "latest",
+    "mongoose": "^9.1.5",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
